--- a/latex/.gitignore
+++ b/latex/.gitignore
@@ -1,4 +1,23 @@
 *.aux
+*.glo
+*.idx
 *.log
 *.toc
-*.pdf
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
