Restructured files and added glossary (instead of references).

--- a/konseptdokument/Makefile
+++ b/konseptdokument/Makefile
@@ -9,7 +9,7 @@ $(report) : $(tex) $(texs) $(imgs)
 	pdflatex $<
 	bibtex $(basename $<)
 	pdflatex $<
-	#makeglossaries $(basename $<)
+	makeglossaries $(basename $<)
 	pdflatex $<
 
 clean :
